<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/puzzle_light"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    app:backgroundTint="@null"
    tools:context=".Reminder.ReminderActivity">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/puzzle_hilite"
            android:orientation="vertical"
            app:backgroundTint="@null">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reminder_Label"
                android:textSize="30dp"
                android:textStyle="bold"
                android:layout_margin="10dp"/>


            <EditText
                android:id="@+id/editTitle"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_margin="10dp"
                android:background="@color/puzzle_light"
                android:hint="@string/task_Label" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <Button
                    android:id="@+id/btnDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="0.5"
                    android:text="@string/task_date" />

                <Button
                    android:id="@+id/btnTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="0.5"
                    android:text="@string/task_time" />

            </LinearLayout>

            <!-- Add this RadioGroup and RadioButtons below the existing views -->
            <RadioGroup
                android:id="@+id/radioGroupFrequency"
                android:layout_width="374dp"
                android:layout_height="48dp"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButtonOneTime"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/task_one" />

                <RadioButton
                    android:id="@+id/radioButtonDaily"
                    android:layout_width="84dp"
                    android:layout_height="48dp"
                    android:text="@string/task_daily" />

            </RadioGroup>



            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/task_save" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>