<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".LoginActivity">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="286dp"
        android:contentDescription="@string/login_failed"
        app:srcCompat="@drawable/older" />


    <EditText
        android:id="@+id/userid"
        android:layout_width="356dp"
        android:layout_height="81dp"
        android:backgroundTint="#143a84"
        android:inputType="text"
        android:layout_marginTop="50dp"
        android:layout_margin="10dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:hint="@string/id"/>

    <LinearLayout
        android:layout_width="378dp"
        android:layout_height="100dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="311dp"
            android:layout_height="59dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="#143a84"
            android:fontFamily="sans-serif-black"
            android:text="@string/login"
            android:textColor="#fff" />

        <CheckBox
            android:id="@+id/relative_login_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/not_elderly"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="370dp"
        android:layout_height="68dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/elderBtn"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:background="#143a84"
            android:fontFamily="sans-serif-black"
            android:text="@string/elderSignup"
            android:textColor="#fff"

            />

        <Button
            android:id="@+id/userBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:background="@drawable/buttonradios"
            android:fontFamily="sans-serif-black"
            android:text="@string/userSignup"
            android:textColor="#143a84"

            />
    </LinearLayout>

    <ProgressBar
            android:id="@+id/progress_bar_login"
            android:visibility="gone"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

</LinearLayout>