<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".AdministratorActivity">
    <Button android:id="@+id/back_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/back"
            android:layout_width="wrap_content" android:layout_height="wrap_content"/>

    <LinearLayout android:layout_width="match_parent"
                  android:orientation="vertical"
                  android:gravity="center"
                  android:layout_height="match_parent">

        <Button android:id="@+id/users_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/users"/>

        <Button android:id="@+id/elderlies_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/elderlies"/>

        <Button
            android:id="@+id/doctors_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Doctors" />

        <Button
            android:id="@+id/payBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Payments" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>