<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/win"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/puzzle_hilite"
    android:orientation="horizontal"
    android:padding="30dip">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/win"
            android:textColor="#009688"
            android:textSize="34sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/menu_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_label" />

        <Button
            android:id="@+id/replay_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/replay_label" />
    </LinearLayout>
</LinearLayout>