<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="3dp"
        android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/user_line"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/baseline_person_24" />

        <LinearLayout
            android:layout_width="320dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/elderly_id"
                android:layout_width="302dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/id2"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/elderly_username"
                android:layout_width="303dp"
                android:layout_height="wrap_content"
                android:text="@string/user_name"
                android:textSize="20dp" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/call_btn"
            android:layout_width="64dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/make_a_call"
            android:src="@android:drawable/stat_sys_phone_call" />
    </LinearLayout>

</LinearLayout>
