<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutDoctorNotes"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dark_gradient"
    android:orientation="vertical">

    <!-- DatePicker for selecting the date -->

    <TextView
        android:id="@+id/textViewTitle1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/sigmar_one"
        android:gravity="center"
        android:text="@string/pick_doctors_title1"
        android:textColor="#3D84BD"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textViewTitle2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/sigmar_one"
        android:text="@string/pick_doctors_title2"
        android:textColor="#888B8E"
        android:textSize="20sp" />

    <!-- Doctors ComboBox (Spinner) -->
    <Spinner
        android:id="@+id/doctorsSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:prompt="@string/select_doctor_prompt" />
    <!-- EditText for adding notes -->
    <EditText
        android:id="@+id/notesEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="@string/doc_note"
        android:inputType="textMultiLine"
        tools:layout_marginBottom="30dp" />

    <!-- Schedule Button -->
    <Button
        android:id="@+id/scheduleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="Schedule" />

    <!-- TimePicker for selecting the time -->

    <!-- Next Button -->
</LinearLayout>
